--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1{
 
 .projects{
     display: flex;
-    justify-content: flex-start
+    justify-content: center;
     
     
 }
@@ -73,8 +73,12 @@ h1{
 
 #portrait{
     height: fit-content;
-    width: 20%;
+    width: 200px;
     border-radius: 100px;
+}
+
+#background{
+    height: 0px;
 }
 
 .background {
@@ -97,6 +101,7 @@ h1{
 
   .b1{
     animation-name: example1;
+    height: 400px;
   }
 
   .b2{
@@ -107,16 +112,37 @@ h1{
 
   .b3{
     animation-name: example3;
-    height: 400px;
+    height: 800px;
 
   }
   .b4{
     animation-name: example4;
-    height: 600px;
+    height: 110px;
+
+  }
+  .b5{
+    animation-name: example5;
+    height: 400px;
+  }
+
+  .b6{
+    animation-name: example6;
+    height: 200px;
+
+  }
+
+  .b7{
+    animation-name: example7;
+    height: 800px;
+
+  }
+  .b8{
+    animation-name: example8;
+    height: 110px;
 
   }
   
-  @keyframes example1 {
+  /* @keyframes example1 {
     0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:20%;}
     100%  {background-color:var(--animation-color); left:120%; top:80%;visibility: hidden;}
   
@@ -136,3 +162,64 @@ h1{
     100%  {background-color:var(--animation-color); left:140%; top:190%;visibility: hidden;}
   
   }
+  @keyframes example5 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:-20%; top:0%;}
+    100%  {background-color:var(--animation-color); left:120%; top:80%;visibility: hidden;}
+  
+  }
+  @keyframes example6 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:110%; top:-50%;}
+    100%  {background-color:var(--animation-color); left:-120%; top:40%;visibility: hidden;}
+  
+  }
+  @keyframes example7 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:0%;}
+    100%  {background-color:var(--animation-color); left:140%; top:120%;visibility: hidden;}
+  
+  }
+  @keyframes example8 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:100%;}
+    100%  {background-color:var(--animation-color); left:140%; top:190%;visibility: hidden;}
+  
+  } */
+
+  @keyframes example1 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:120%; top:80%; visibility: hidden;}
+  }
+  
+  @keyframes example2 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:120%; top:-50%; visibility: hidden;}
+  }
+  
+  @keyframes example3 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:140%; top:120%; visibility: hidden;}
+  }
+  
+  @keyframes example4 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:140%; top:190%; visibility: hidden;}
+  }
+  
+  @keyframes example5 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:120%; top:80%; visibility: hidden;}
+  }
+  
+  @keyframes example6 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:-120%; top:40%; visibility: hidden;}
+  }
+  
+  @keyframes example7 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:140%; top:120%; visibility: hidden;}
+  }
+  
+  @keyframes example8 {
+    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
+    100% {background-color:var(--animation-color); left:140%; top:190%; visibility: hidden;}
+  }
+  
