--- a/style.css
+++ b/style.css
@@ -79,147 +79,39 @@ h1{
 
 #background{
     height: 0px;
+    box-sizing: border-box;
 }
 
 .background {
-    transform: rotate(130deg);
+    transform: rotate(180deg);
     /* position: sticky; */
     /* left: 20%;
     right: 20%; */
     width: 100px;
     height: 800px;
-    border-radius: 60px;
+    border-radius: 50px;
     background-color: var(--animation-color);
     position: relative;
-    animation-duration:5s;
+    animation-duration:8s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     position: absolute;
     visibility: hidden;
     z-index: 0;
+    animation-name: example1;
+
   }
 
   .b1{
-    animation-name: example1;
     height: 400px;
+    background-color: var(--animation-color);
+    transform: translateY(350px) rotate(150deg);
   }
-
-  .b2{
-    animation-name: example2;
-    height: 200px;
-
-  }
-
-  .b3{
-    animation-name: example3;
-    height: 800px;
-
-  }
-  .b4{
-    animation-name: example4;
-    height: 110px;
-
-  }
-  .b5{
-    animation-name: example5;
-    height: 400px;
-  }
-
-  .b6{
-    animation-name: example6;
-    height: 200px;
-
-  }
-
-  .b7{
-    animation-name: example7;
-    height: 800px;
-
-  }
-  .b8{
-    animation-name: example8;
-    height: 110px;
-
-  }
-  
-  /* @keyframes example1 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:20%;}
-    100%  {background-color:var(--animation-color); left:120%; top:80%;visibility: hidden;}
-  
-  }
-  @keyframes example2 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:-50%;}
-    100%  {background-color:var(--animation-color); left:120%; top:40%;visibility: hidden;}
-  
-  }
-  @keyframes example3 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:0%;}
-    100%  {background-color:var(--animation-color); left:140%; top:120%;visibility: hidden;}
-  
-  }
-  @keyframes example4 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:100%;}
-    100%  {background-color:var(--animation-color); left:140%; top:190%;visibility: hidden;}
-  
-  }
-  @keyframes example5 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:-20%; top:0%;}
-    100%  {background-color:var(--animation-color); left:120%; top:80%;visibility: hidden;}
-  
-  }
-  @keyframes example6 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:110%; top:-50%;}
-    100%  {background-color:var(--animation-color); left:-120%; top:40%;visibility: hidden;}
-  
-  }
-  @keyframes example7 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:0%;}
-    100%  {background-color:var(--animation-color); left:140%; top:120%;visibility: hidden;}
-  
-  }
-  @keyframes example8 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:-40%; top:100%;}
-    100%  {background-color:var(--animation-color); left:140%; top:190%;visibility: hidden;}
-  
-  } */
 
   @keyframes example1 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:120%; top:80%; visibility: hidden;}
+    0%   {visibility: visible; ; left:-15%; top:-125%;}
+    100% {left:200%; top:100%; visibility: hidden;}
   }
   
-  @keyframes example2 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:120%; top:-50%; visibility: hidden;}
-  }
-  
-  @keyframes example3 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:140%; top:120%; visibility: hidden;}
-  }
-  
-  @keyframes example4 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:140%; top:190%; visibility: hidden;}
-  }
-  
-  @keyframes example5 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:120%; top:80%; visibility: hidden;}
-  }
-  
-  @keyframes example6 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:-120%; top:40%; visibility: hidden;}
-  }
-  
-  @keyframes example7 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:140%; top:120%; visibility: hidden;}
-  }
-  
-  @keyframes example8 {
-    0%   {visibility: visible; background-color:var(--animation-color); left:0; top:0;}
-    100% {background-color:var(--animation-color); left:140%; top:190%; visibility: hidden;}
-  }
+
   
