--- a/media-queries.css
+++ b/media-queries.css
@@ -1,6 +1,16 @@
 @media screen and (max-width: 375px) {
     .modal {
-        scale: 0.5;
+        scale: 1;
+    }
+
+    #pokedexVideo {
+        clip-path: inset(1% 1% 1% 0%);
+    }
+    #marsVideo {
+        clip-path: inset(1% 1% 1% 1%);
+    }
+    #todoVideo {
+        clip-path: inset(0% 0% 0% 0%);
     }
 }
 @media screen and (min-width: 475px) {
@@ -13,7 +23,7 @@
         margin: 0 auto;
     }
 
-    #pokemonVideo {
+    #pokedexVideo {
         clip-path: inset(0% 10% 0% 10%);
     }
     #marsVideo {
