--- a/index.css
+++ b/index.css
@@ -169,13 +169,14 @@ button {
     text-align: center;
     gap: 1.5rem;
     height: 100%;
+    width: 100%;
 }
 
 .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 50%;
+    min-width: 50%;
 }
 
 .project {
