--- a/index.css
+++ b/index.css
@@ -1,10 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+
 body,
 html {
     margin: 0px;
     padding: 0px;
     font-size: var(--font-size);
     font-family: var(--font-family);
-    overflow-x: hidden;
     background-color: var(--color-2);
     margin: 0 auto;
 }
@@ -14,7 +17,7 @@ html {
 
 .sectionContainer {
     scroll-snap-type: y mandatory;
-    overflow: scroll;
+    overflow-y: scroll;
     height: 100vh;
     width: 100%;
 }
