--- a/media-queries.css
+++ b/media-queries.css
@@ -16,18 +16,20 @@
 @media screen and (min-width: 475px) {
 }
 
-@media screen and (min-width: 565px) {
+@media screen and (min-width: 768px) {
     body,
     section {
-        width: 60vw; /* margin: 0 auto; */
+        width: 70vw; /* margin: 0 auto; */
     }
 
     .sectionContainer {
-        scroll-snap-type: none;
+        scroll-snap-type: y mandatory;
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
         gap: 5rem;
     }
 
@@ -40,22 +42,23 @@
     }
 
     #section1 {
-        display: none;
+        /* display: none; */
     }
 
     #section1desktop {
         height: 33%;
+        /* padding-top: 4rem; */
     }
     #section1desktop img {
-        padding: 1rem;
+        /* padding: 1rem; */
     }
 
     #section2 {
         height: fit-content;
-        width: 100%;
+        width: 60%;
     }
     #section2 p {
-        overflow: auto;
+        /* overflow: auto; */
     }
     #section3 {
         height: max-content;
@@ -91,8 +94,8 @@
     }
 
     .modal {
-        height: 60%;
-        width: auto;
+        height: 100vh;
+        width: 100vw;
     }
 
     .modal video {
