--- a/section3.css
+++ b/section3.css
@@ -38,9 +38,7 @@
     gap: 1rem;
     background-color: rgba(255, 255, 255, 0.2);
     padding: 1rem 3rem;
-    flex-grow: 1;
-    max-height: 100%;
-    width: 100%;
+    width: 23rem;
 }
 
 .project img {
