landingpage mobile refactored

--- a/index.css
+++ b/index.css
@@ -1,270 +1,10 @@
-* {
-    box-sizing: border-box;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: var(--color-1);
 }
 
-body,
-html {
-    margin: 0px;
-    padding: 0px;
-    font-size: var(--font-size);
-    font-family: var(--font-family);
-    background-color: var(--color-2);
-    margin: 0 auto;
-}
-
-.body {
-}
-
-.sectionContainer {
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-    height: 100vh;
-    width: 100%;
-}
-
-#section1,
-.image,
-.card,
-.actions,
-#dislike,
-#like {
-    display: flex;
-}
-
-.desktopHero {
-    width: 100%;
-    display: none;
-    justify-content: center;
-}
-
-.desktopHero img {
-    /* height: 20vh; */
-}
-
-#section1 {
-    flex-direction: column;
-    /* max-width: 100%; */
-    /* overflow-x: hidden; */
-}
-
-section {
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
+/* header {
     height: 100vh;
     width: 100vw;
-}
-
-.card {
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    background-image: url("images/portrait.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100%;
-    width: 100%;
-    /* margin: 0.1rem; */
-    border-radius: 0.3rem;
-    flex: 5;
-    background-color: #d6c9de;
-    color: var(--color-1);
-    padding-left: 0.5rem;
-    padding-bottom: 0.5rem;
-    touch-action: none;
-}
-
-.actions {
-    background-color: #d6c9de;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-    height: 100%;
-    width: 100%;
-}
-
-button {
-    border: none;
-    background: none;
-    font-size: inherit;
-    font-family: inherit;
-    cursor: pointer;
-    outline: none;
-    border-radius: 100%;
-    height: 4rem;
-    width: 4rem;
-}
-
-.is-like {
-    width: 100%;
-}
-
-#dislike {
-    justify-content: center;
-    align-items: center;
-    background-color: #888888;
-}
-
-#like {
-    justify-content: center;
-    align-items: center;
-    background-color: #fb4f68;
-}
-
-#dislike img {
-    scale: 1;
-}
-
-#like img {
-    scale: 1;
-}
-
-#section2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#section2 p {
-    width: 80%;
-    margin: 0 auto;
-    text-align: center;
-    /* font-size: medium; */
-    line-height: 24px;
-    max-height: 80vh;
-    overflow: scroll;
-
-    box-sizing: border-box;
-}
-
-.modal {
-    /* position: fixed; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(10px);
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-}
-
-.modal.visible {
-    opacity: 1;
-    visibility: visible;
-}
-
-.modal video {
-    height: auto;
-    width: 60%;
-}
-
-#pokedexVideo {
-    /* clip-path: inset(0% 0% 0% 0%); */
-}
-
-#section3 {
-    overflow: hidden;
-    padding: 1rem 0;
-    box-sizing: border-box;
-    /* background: radial-gradient(rgba(0, 0, 0, 0.4), var(--color-1)); */
-}
-
-.projectsContainer h2 {
-    margin: 0;
-    white-space: nowrap;
-}
-
-.projectsContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 1.5rem;
-    height: 100%;
-    width: 100%;
-}
-
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 50%;
-}
-
-.project img {
-    height: 4rem;
-    width: 4rem;
-}
-
-.techContainer {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-}
-
-.tech {
-    border-radius: 1rem;
-    padding: 0.1rem 0.5rem;
-}
-
-.html {
-    background-color: #c96f58;
-}
-
-.css {
-    background-color: #7aa1be;
-}
-
-.js {
-    background-color: #cec788;
-}
-
-.ts {
-    background-color: #377cc8;
-}
-
-.react {
-    background-color: #61dafb;
-}
-
-/* Typography */
-
-h4,
-h5 {
-    margin: 0px;
-}
-
-h1 {
-    text-align: center;
-    padding: 1.5rem;
-    margin: 0;
-}
-
-/* Navigation */
-
-/* Modal */
-
-/* .modal {
-    display: none;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    height: 50%;
-    width: 50%;
-    margin: 0 auto;
-    background-color: #fb4f68;
 } */
-
-#section3 {
-    width: 100vw;
-    position: relative;
-}
-#section3 h1 {
-    display: none;
-}
