--- a/structure.css
+++ b/structure.css
@@ -1,3 +1,6 @@
+body {
+}
+
 section {
     height: 100vh;
     width: 100vw;
@@ -5,9 +8,10 @@ section {
 
 .sectionContainer {
     scroll-snap-type: y mandatory;
-    overflow: scroll;
+    height: 100vh;
+    overflow-y: scroll;
 }
+
 .sectionContainer > section {
-    height: 100vh; /* Full viewport height for each section */
-    scroll-snap-align: center; /* Snap at the start of each section */
+    scroll-snap-align: center;
 }
