Refactor of mobile version done

--- a/media-queries.css
+++ b/media-queries.css
@@ -1,107 +1,5 @@
-@media screen and (max-width: 900px) {
-    .modal {
-        scale: 1;
+@media screen and (max-width: 330px) {
+    :root {
+        font-size: 12px;
     }
-}
-
-@media screen and (min-width: 768px) {
-    body,
-    section {
-        width: 70vw; /* margin: 0 auto; */
-    }
-
-    .sectionContainer {
-        scroll-snap-type: y mandatory;
-        -ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 5rem;
-    }
-
-    .sectionContainer::-webkit-scrollbar {
-        display: none;
-    }
-
-    .desktopHero {
-        display: flex;
-    }
-
-    #section1 {
-        display: none;
-    }
-
-    #section1desktop {
-        height: 33%;
-        padding-top: 4rem;
-    }
-    #section1desktop img {
-        padding: 1rem;
-    }
-
-    #section2 {
-        height: fit-content;
-        width: 60%;
-    }
-    #section2 p {
-        /* overflow: auto; */
-        overflow: visible;
-        height: fit-content;
-    }
-    #section3 {
-        height: max-content;
-        width: 100%;
-        overflow: visible;
-    }
-
-    .wrapper {
-        min-width: 23rem;
-    }
-
-    #section3 h1 {
-        display: block;
-    }
-
-    #pokedexVideo {
-        clip-path: inset(0% 10% 0% 10%);
-    }
-    #marsVideo {
-        clip-path: inset(2% 0% 5% 1%);
-    }
-    #todoVideo {
-        clip-path: inset(2% 0% 2% 1%);
-    }
-    #pokedexGif {
-        clip-path: inset(0% 10% 0% 10%);
-    }
-    #marsGif {
-        clip-path: inset(1% 0% 5% 1%);
-    }
-    #todoGif {
-        clip-path: inset(2% 0% 2% 1%);
-    }
-
-    .modal {
-        height: 100vh;
-        width: 100vw;
-    }
-
-    .modal video {
-        height: auto;
-        width: 90%;
-    }
-
-    .modal img {
-        height: auto;
-        width: 90%;
-    }
-
-    .projectsContainer {
-        flex-direction: row;
-        /* flex-wrap: wrap; */
-    }
-}
-@media screen and (min-width: 765px) {
 }
