--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background-color: var(--color-1);
     font-family: var(--font-family);
+    overflow: hidden;
 }
 
 section {
@@ -10,6 +11,9 @@ section {
     width: 100vw;
     box-sizing: border-box;
     text-align: center;
+}
+
+.aboutMe {
     padding: 1rem 2rem;
 }
 
@@ -31,6 +35,10 @@ h2 {
 
 /* Project section */
 
+.projects {
+    position: relative;
+}
+
 .projectsContainer {
     display: flex;
     flex-direction: column;
@@ -50,7 +58,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 17rem;
+    /* min-width: 17rem; */
 }
 
 .project {
@@ -61,7 +69,7 @@ h2 {
     gap: 1rem;
     background-color: rgba(255, 255, 255, 0.2);
     padding: 1rem 3rem;
-    width: 18rem;
+    width: 13rem;
 }
 
 .project img {
@@ -101,33 +109,62 @@ h2 {
 }
 
 .modal {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
+    transform: translateX(-100%);
     height: 100vh;
     width: 100vw;
+    visibility: hidden;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
     opacity: 0;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    padding: 1rem;
 }
 
 .modal.visible {
+    transform: translateX(0);
+    display: flex;
     opacity: 1;
     visibility: visible;
 }
 
-.modal video {
-    height: auto;
-    width: 40%;
+.video-container {
+    /* position: relative; */
+    width: 80%; /* Adjust as needed */
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
+.video-container video {
+    height: auto;
+    width: 100%;
+}
+
+.exit-button {
+    bottom: 2rem;
+    position: absolute;
+    color: var(--color-1);
+    background-color: rgba(171, 66, 66, 0.7);
+    border: none;
+    cursor: pointer;
+    padding: 1rem 6rem;
+    border-radius: 1rem;
+}
+
+/* .modal video {
+    height: auto;
+    width: 80%;
+} */
+
 #pokedexVideo {
-    clip-path: inset(1% 1% 0% 0%);
+    clip-path: inset(1% 1% 0% 1%);
 }
 #marsVideo {
-    clip-path: inset(1% 0% 5% 1%);
+    clip-path: inset(1% 3% 4% 1%);
 }
 #todoVideo {
     clip-path: inset(2% 0% 2% 1%);
