--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: var(--color-1);
+    background-color: var(--color-2);
+    /* background-color: var(--color-2); */
     font-family: var(--font-family);
     overflow: hidden;
 }
