--- a/media-queries.css
+++ b/media-queries.css
@@ -6,6 +6,7 @@
 @media screen and (min-width: 768px) {
     header {
         display: block;
+        /* background-color:  */
     }
 
     .container {
@@ -13,22 +14,53 @@
     }
 
     .desktopHero {
+        box-sizing: border-box;
         display: flex;
-        height: 20vh;
+        height: fit-content;
         width: 100vw;
-        gap: 6rem;
-        border-bottom: #f9f871 solid 1rem;
+        position: sticky;
+        padding: 1.5rem;
+        /* border-bottom: #83619a5f solid 1rem; */
     }
 
-    .desktopHero h2 {
+    .imageAndName {
+        gap: 6rem;
+        height: 100%;
+        padding-top: 3.5rem;
+        /* margin-top: 7.5rem; */
+        /* box-sizing: border-box; */
+    }
+
+    .imageAndName h2 {
         margin: 0;
         padding: 0;
         text-align: center;
     }
 
-    .desktopHero img {
-        height: 80%;
+    .imageAndName img {
+        height: 7rem;
     }
+
+    /* navbar */
+
+    .navBar ul {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        list-style-type: none;
+    }
+
+    .navBar ul li a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .active {
+        background-color: rgba(0, 0, 0, 0.5);
+        border-bottom: solid 2px #83619a5f;
+    }
+
+    /* sections */
 
     .sectionContainer {
         height: 80vh;
@@ -36,9 +68,14 @@
 
     .sectionContainer > section {
         height: 80vh;
-        padding: 6rem 8rem;
+        /* padding: 6rem 8rem; */
+        margin: 0 auto;
+        max-width: 59rem;
     }
 
+    .sectionContainer #section1 {
+        padding-bottom: 4rem;
+    }
     .sectionContainer #section2 {
         padding: 0 10rem;
     }
