--- a/mobileHeader.css
+++ b/mobileHeader.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     overflow-x: hidden;
 }
@@ -14,11 +14,12 @@
 }
 
 .card {
-    background-image: url("images/portrait.jpg");
+    background-image: url("images/defaultAvatar.jpg");
+    /* background-image: url("images/portrait.jpg"); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 85vh;
+    min-height: 85vh;
     width: 100%;
     color: var(--color-1);
     padding-left: 0.5rem;
@@ -27,23 +28,19 @@
 }
 
 .actions {
-    flex: 1;
+    /* flex: 5; */
+    /* min-height: 15vh; */
     width: 100%;
 }
 
 .actions button {
     border: none;
     background: none;
-    font-size: inherit;
-    font-family: inherit;
     cursor: pointer;
     outline: none;
     border-radius: 100%;
-
-    justify-content: center;
-    align-items: center;
     margin: 0rem 0.5rem 0.5rem 0.5rem;
-    padding: 1.5rem;
+    padding: 2rem;
 }
 
 .actions button img {
