--- a/media-queries.css
+++ b/media-queries.css
@@ -8,6 +8,12 @@
     }
 }
 @media screen and (min-width: 768px) {
+    body{
+        overflow: visible;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+    }
     header {
         display: block;
         /* background-color:  */
@@ -71,11 +77,12 @@
     /* sections */
 
     .sectionContainer {
-        min-height: 80vh;
+        flex-grow: 1;
+        height: 100%;
     }
 
     .sectionContainer > section {
-        min-height: 80vh;
+        height: 100%;
         /* padding: 6rem 8rem; */
         margin: 0 auto;
         max-width: 59rem;
@@ -85,8 +92,8 @@
         /* padding-bottom: 10rem; */
     }
     .sectionContainer #section2 {
-        padding: 0 10rem;
-        padding-bottom: 10rem;
+        /* padding: 0 10rem;
+        padding-bottom: 10rem; */
     }
 
     .titleAndImage img {
@@ -97,8 +104,12 @@
         flex-direction: row;
     }
 
+    .project{
+        min-width: 15rem;
+    }
+
     .modal {
-        width: 100%;
-        height: 80%;
+        width: 80vw;;
+        height: auto;
     }
 }
