--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -12,15 +12,18 @@
         display: flex;
         flex-direction: column;
         height: 100vh;
+        /* overflow: hidden; */
     }
     header {
         display: block;
         flex: 0 0 auto;
+        top: 0;
+        position: sticky;
         /* background-color:  */
     }
 
     main {
-        flex: 1;
+        height: 84%;
     }
 
     .container {
@@ -88,7 +91,7 @@
 
     .sectionContainer > section {
         scroll-snap-align: center; /* Snap the center of each section */
-        height: 100%;
+        max-height: 100%;
         margin: 0 auto;
         max-width: 59rem;
     }
@@ -107,10 +110,11 @@
 
     .projectsContainer {
         flex-direction: row;
+        width: 100%;
     }
 
     .project {
-        min-width: 10rem;
+        min-width: 18rem;
     }
 
     .modal {
