--- a/css/index.css
+++ b/css/index.css
@@ -19,14 +19,15 @@ body {
 .sectionContainer {
     height: fit-content;
     overflow-y: scroll;
-    box-sizing: border-box;
+    scroll-snap-type: y mandatory;
 }
 
 section {
     height: 100vh;
     width: 100vw;
-    box-sizing: border-box;
     text-align: center;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
 }
 
 .aboutMe {
@@ -41,6 +42,7 @@ section {
 .aboutMe img {
     width: 30%;
     margin-bottom: 3rem;
+    display: none;
 }
 
 .titleAndImage {
