--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -91,7 +91,7 @@
     }
 
     .sectionContainer > section {
-        scroll-snap-align: start; /* Snap the center of each section */
+        scroll-snap-align: start;
         scroll-snap-stop: always;
         max-height: 100%;
         margin: 0 auto;
