--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -37,7 +37,7 @@
         height: fit-content;
         width: 100vw;
         position: sticky;
-        padding: 1.5rem;
+        /* padding: 1.5rem; */
         background-color: var(--color-2);
         /* border-bottom: #83619a5f solid 1rem; */
     }
@@ -96,6 +96,10 @@
         max-height: 100%;
         margin: 0 auto;
         max-width: 59rem;
+    }
+
+    .aboutMe {
+        padding: 0rem 5rem;
     }
 
     .aboutMe img {
