--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background-color: var(--color-2);
+    /* background-color: var(--color-2); */
     font-family: var(--font-family);
     overflow: hidden;
     overflow: visible;
@@ -26,7 +26,7 @@ section {
     height: 100vh;
     width: 100vw;
     text-align: center;
-    scroll-snap-align: start;
+    scroll-snap-align: center;
     scroll-snap-stop: always;
 }
 
@@ -35,7 +35,7 @@ section {
 }
 .aboutMe p {
     overflow: hidden;
-    text-overflow: "---";
+    text-overflow: '---';
     line-height: 1.5;
 }
 
@@ -95,8 +95,24 @@ h2 {
 }
 
 .project img {
-    height: 4rem;
-    width: 4rem;
+    height: 5rem;
+    width: 5rem;
+    /* margin: 0.5rem; */
+    /* overflow: visible; */
+}
+
+.mars img {
+    padding: 0.5rem;
+    animation: spin 60s infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .techContainer {
@@ -107,7 +123,7 @@ h2 {
 }
 
 .tech {
-    font-size: clamp(0.3rem, 0.6rem, 1rem);
+    /* font-size: clamp(0.3rem, 0.6rem, 1rem); */
     border-radius: 1rem;
     padding: 0.1rem 0.5rem;
 }
@@ -229,7 +245,7 @@ h2 {
     outline: none;
 }
 
-.contact-form input[type="submit"] {
+.contact-form input[type='submit'] {
     margin-top: 2rem;
     padding: 2rem 0;
     background-color: rgb(250, 155, 165);
