--- a/css/variables.css
+++ b/css/variables.css
@@ -2,8 +2,9 @@
     /* Palette */
     --color-1: #f8e8f8;
     --color-2: #d6c9de;
+    --color-3: #e8f8e8;
 
     /* Font */
     --font-size: 16px;
-    --font-family: "Montserrat", sans-serif;
+    --font-family: 'Montserrat', sans-serif;
 }
