--- a/index.css
+++ b/index.css
@@ -4,16 +4,16 @@ html,
 body {
     font-family: 'Source Code Pro', monospace;
     color: var(--text-primary);
-    height: 100vh;
+    height: 100svh;
     overflow-x: hidden;
     margin: 0;
     padding: 0;
-
     scroll-snap-type: y mandatory;
 }
 
 body::-webkit-scrollbar {
-    width: 0.25rem;
+    width: 0.5rem;
+    height: 100%;
 }
 body::-webkit-track {
     background: var(--bg-secondary);
@@ -105,7 +105,7 @@ section > * {
 }
 
 .hero {
-    height: 100vh;
+    height: 100svh;
     scroll-snap-align: center;
 }
 
@@ -143,7 +143,7 @@ section > * {
 
     padding-right: 1.5rem;
     padding-left: 1.5rem;
-    min-height: 100vh;
+    min-height: 100svh;
     max-width: 40rem;
 }
 
@@ -170,7 +170,7 @@ section > * {
     align-items: center;
     text-align: center;
     gap: 2rem;
-    height: 100vh;
+    height: 100svh;
     position: relative;
     scroll-snap-align: center;
 }
@@ -254,7 +254,7 @@ section > * {
 /* contact section */
 
 .form-container {
-    height: 100vh;
+    height: 100svh;
     scroll-snap-align: center;
 }
 
